# design-patterns

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: deploy.yml
design-patterns/: BusinessLogic.cpp  BusinessLogic.hpp  DarkThemeFactory.cpp  DarkThemeFactory.hpp  GuiElements.cpp  GuiElements.hpp  GuiFactory.hpp  LightThemeFactory.cpp  LightThemeFactory.hpp  MeansOfTransport.cpp  MeansOfTransport.hpp  SimpleFactory.cpp  SimpleFactory.hpp  SimpleProducts.cpp  SimpleProducts.hpp  Singleton.cpp  Singleton.hpp  config.h.in  main.cpp
doc/Creational/: abstract-factory-example.puml  abstract-factory.puml  factory-method.puml  simple-factory.puml  singleton-cpp.puml  singleton.puml
doc/Structural/: adapter.puml  adapter_before.puml  facade.puml  facade_before.puml
